--- a/z_server/templates/z_server/sendmsg.html
+++ b/z_server/templates/z_server/sendmsg.html
@@ -7,9 +7,10 @@
 	hello zizo world!
 	
 	{% for msg in msg_list %}	
-			{{ msg.message }}
+			{{ msg.message }}<br>
 	{% endfor %}
 	
+		<br><br><br><br><br>
 		<form method="GET" action="/services/z_server/sendmsg">
 			<input type="text" class="form-control login-field" value="" placeholder="User" id="User"  name="User"/>
 			<input type="text" class="form-control login-field" value="" placeholder="zizo_id" id="zizo_id"  name="zizo_id"/>
