--- a/z_server/templates/z_server/sendmsg.html
+++ b/z_server/templates/z_server/sendmsg.html
@@ -11,7 +11,7 @@
 			{{ msg.message }}<br>
 		{% else %}
 			{{ msg.message }} / <fonr color=red>new</font><br>
-		{% endif %}
+		{% endifequal %}
 	{% endfor %}
 	
 		<br><br><br><br><br>
