--- a/z_server/templates/z_server/sendmsg.html
+++ b/z_server/templates/z_server/sendmsg.html
@@ -9,11 +9,12 @@
 	{% for msg in msg_list %}
 		<div style="background:#ffffff; padding:10px; border:1px solid #ffffff; border-radius:10px;">
 		{% ifequal msg.done True %}
-			<img src="{{ MEDIA_URL }}zizocon.png" width="30" height="30"> < {{ msg.message }}<br>
+			<img src="{{ MEDIA_URL }}zizocon.png" width="30" height="30"> 「 {{ msg.message }} 」<br>
 		{% else %}
-			<img src="{{ MEDIA_URL }}zizocon.png" width="30" height="30> < {{ msg.message }} / <fonr color=red>new</font><br>
+			<img src="{{ MEDIA_URL }}zizocon.png" width="30" height="30> 「 {{ msg.message }} 」 / <fonr color=red>new</font><br>
 		{% endifequal %}
 		</div>
+		<br>
 	{% endfor %}
 	
 		<br><br><br><br><br>
