--- a/z_server/templates/z_server/sendmsg.html
+++ b/z_server/templates/z_server/sendmsg.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 	 </head>
 	<body bgcolor=#99ffff>
-	ZIZOからのお告げやで<br><br>
+	<!-- ZIZOからのお告げやで<br><br> -->
 	
 	{% for msg in msg_list %}
 		<div style="background:#ffffff; padding:10px; border:1px solid #ffffff; border-radius:10px;">
